--- a/GuncelTelevizyonUWP/project.json
+++ b/GuncelTelevizyonUWP/project.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "Prism.Core": "6.1.0",
+    "Prism.Unity": "6.1.1",
     "Prism.Windows": "6.0.1"
   },
   "frameworks": {
