JSON.Net implemented.

--- a/GuncelTelevizyonUWP/project.json
+++ b/GuncelTelevizyonUWP/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "Newtonsoft.Json": "8.0.1",
     "Prism.Core": "6.1.0",
     "Prism.Unity": "6.1.1",
     "Prism.Windows": "6.0.1"
