--- a/GuncelTelevizyonUWP/GuncelTelevizyonUWP.csproj
+++ b/GuncelTelevizyonUWP/GuncelTelevizyonUWP.csproj
@@ -95,8 +95,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Converters\AppThemeToRequestedThemeConverter.cs" />
+    <Compile Include="Context\ApplicationContext.cs" />
     <Compile Include="Helpers\BaseApplication.cs" />
+    <Compile Include="Helpers\BasePage.cs" />
     <Compile Include="Helpers\BaseViewModel.cs" />
     <Compile Include="Helpers\ReflectionHelper.cs" />
     <Compile Include="Helpers\SubPage.cs" />
@@ -153,7 +154,9 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Converters\" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
