WinRTXamlToolkit implemented to solution in order to have multiple selections in ListViews.

--- a/GuncelTelevizyonUWP/project.json
+++ b/GuncelTelevizyonUWP/project.json
@@ -4,7 +4,8 @@
     "Newtonsoft.Json": "8.0.1",
     "Prism.Core": "6.1.0",
     "Prism.Unity": "6.1.1",
-    "Prism.Windows": "6.0.1"
+    "Prism.Windows": "6.0.1",
+    "WinRTXamlToolkit.UWP": "1.9.4"
   },
   "frameworks": {
     "uap10.0": {}
