Project file modifications.

--- a/GuncelTelevizyonUWP/GuncelTelevizyonUWP.csproj
+++ b/GuncelTelevizyonUWP/GuncelTelevizyonUWP.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Helpers\SubPage.cs" />
     <Compile Include="Interfaces\IChannelService.cs" />
     <Compile Include="Interfaces\ISettingsService.cs" />
+    <Compile Include="Interfaces\ISynchronizationService.cs" />
     <Compile Include="Models\AppTheme.cs" />
     <Compile Include="Models\Channel.cs" />
     <Compile Include="Models\ChannelCategory.cs" />
@@ -122,6 +123,7 @@
     <Compile Include="Models\HamburgerMenuItemType.cs" />
     <Compile Include="Selectors\HamburgerMenuItemSelector.cs" />
     <Compile Include="Services\ChannelService.cs" />
+    <Compile Include="Services\SynchronizationService.cs" />
     <Compile Include="ViewModels\ChannelBrowserPageViewModel.cs" />
     <Compile Include="Models\HamburgerMenuItem.cs" />
     <Compile Include="Models\ChannelModelView.cs" />
@@ -135,6 +137,7 @@
     <Compile Include="ViewModels\StreamsPageViewModel.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
     <Compile Include="ViewModels\SettingsPageViewModel.cs" />
+    <Compile Include="ViewModels\SynchronizationPageViewModel.cs" />
     <Compile Include="Views\ChannelBrowserPage.xaml.cs">
       <DependentUpon>ChannelBrowserPage.xaml</DependentUpon>
     </Compile>
@@ -146,6 +149,9 @@
     </Compile>
     <Compile Include="Views\SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SynchronizationPage.xaml.cs">
+      <DependentUpon>SynchronizationPage.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -184,6 +190,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\SettingsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SynchronizationPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
