--- a/GuncelTelevizyonUWP/GuncelTelevizyonUWP.csproj
+++ b/GuncelTelevizyonUWP/GuncelTelevizyonUWP.csproj
@@ -113,15 +113,20 @@
     <Compile Include="Helpers\ReflectionHelper.cs" />
     <Compile Include="Helpers\SubPage.cs" />
     <Compile Include="Interfaces\IChannelService.cs" />
+    <Compile Include="Interfaces\IDialogService.cs" />
+    <Compile Include="Interfaces\IFeedbackService.cs" />
     <Compile Include="Interfaces\ISettingsService.cs" />
     <Compile Include="Interfaces\ISynchronizationService.cs" />
     <Compile Include="Models\AppTheme.cs" />
     <Compile Include="Models\Channel.cs" />
     <Compile Include="Models\ChannelCategory.cs" />
     <Compile Include="Models\DummyChannelCurrentStreamInformation.cs" />
+    <Compile Include="Models\Feedback.cs" />
     <Compile Include="Models\HamburgerMenuItemType.cs" />
     <Compile Include="Selectors\HamburgerMenuItemSelector.cs" />
     <Compile Include="Services\ChannelService.cs" />
+    <Compile Include="Services\DialogService.cs" />
+    <Compile Include="Services\FeedbackService.cs" />
     <Compile Include="Services\SynchronizationService.cs" />
     <Compile Include="ViewModels\AboutPageViewModel.cs" />
     <Compile Include="ViewModels\ChannelBrowserPageViewModel.cs" />
