--- a/GuncelTelevizyonUWP/project.json
+++ b/GuncelTelevizyonUWP/project.json
@@ -5,6 +5,7 @@
     "Prism.Core": "6.1.0",
     "Prism.Unity": "6.1.1",
     "Prism.Windows": "6.0.1",
+    "WindowsAzure.MobileServices": "1.3.2",
     "WinRTXamlToolkit.UWP": "1.9.4"
   },
   "frameworks": {
