Channel services are now as dummy as they were.
* Dummy classes are removed.
* ContextHelper implemented. Services are now reads all the data from
cache.
* Getting current channels and their stream informations are working as
intedted.

--- a/GuncelTelevizyonUWP/GuncelTelevizyonUWP.csproj
+++ b/GuncelTelevizyonUWP/GuncelTelevizyonUWP.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Helpers\BaseApplication.cs" />
     <Compile Include="Helpers\BasePage.cs" />
     <Compile Include="Helpers\BaseViewModel.cs" />
+    <Compile Include="Helpers\ContextHelper.cs" />
     <Compile Include="Helpers\MobileServiceHelper.cs" />
     <Compile Include="Helpers\ReflectionHelper.cs" />
     <Compile Include="Helpers\SubPage.cs" />
@@ -122,9 +123,10 @@
     <Compile Include="Models\AppTheme.cs" />
     <Compile Include="Models\Channel.cs" />
     <Compile Include="Models\ChannelCategory.cs" />
-    <Compile Include="Models\DummyChannelCurrentStreamInformation.cs" />
+    <Compile Include="Models\ChannelStreamInformation.cs" />
     <Compile Include="Models\Feedback.cs" />
     <Compile Include="Models\HamburgerMenuItemType.cs" />
+    <Compile Include="Models\StreamInformation.cs" />
     <Compile Include="Selectors\HamburgerMenuItemSelector.cs" />
     <Compile Include="Services\ChannelService.cs" />
     <Compile Include="Services\DialogService.cs" />
