--- a/GuncelTelevizyonUWP/GuncelTelevizyonUWP.csproj
+++ b/GuncelTelevizyonUWP/GuncelTelevizyonUWP.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
     <Compile Include="Converters\BooleanToVisibilityReverseConverter.cs" />
     <Compile Include="Converters\CountToBooleanConverter.cs" />
+    <Compile Include="Converters\CountToVisibilityReverseConverter.cs" />
     <Compile Include="Converters\DarkAppThemeToBooleanConverter.cs" />
     <Compile Include="Converters\DateTimeToTimeSpanConverter.cs" />
     <Compile Include="Converters\NullToVisibilityConverter.cs" />
